crates/tokio-otp/tests/ui/topology/options_malformed.stderr
error: expected `=`
  --> tests/ui/topology/options_malformed.rs:16:23
   |
16 |     #[topology(options)]
   |                       ^
